--- a/node-blog/package.json
+++ b/node-blog/package.json
@@ -20,7 +20,9 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"aws-sdk": "2.188.0",
+		"@aws-sdk/client-s3": "^3.431.0",
+		"@aws-sdk/s3-request-presigner": "^3.431.0",
+		"aws-sdk": "^2.188.0",
 		"body-parser": "1.17.2",
 		"concurrently": "3.5.0",
 		"cookie-session": "2.0.0-beta.2",
